[package]
name = "auria-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auria-core/auria-runtime"
authors = ["AURIA Team <auria@dust.llc>"]
description = "AURIA Runtime Core - Plugin system"

[dependencies]
auria-core = { path = "../auria-core", version = "0.1.0"}
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
libloading = "0.8"
tokio = { version = "1.35", features = ["sync"] }
